--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,14 +21,20 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-
-  charts_flutter: ^0.9.0
+  benchmark_framework_x:
+    git:
+      url: git@github.com:winksaville/dart_benchmark_framework_x
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+
+  charts_flutter: ^0.9.0
+
+  flutter:
+    sdk: flutter
+
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
