--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
 
-  charts_flutter: ^0.9.0
+  charts_flutter_cf: ^0.10.2
 
   flutter:
     sdk: flutter
