Update to latest submodules/charts_cf
Also added submodules/charts in case I want to check with the "official"
version.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "submodules/charts_cf"]
 	path = submodules/charts_cf
 	url = git@github.com:winksaville/charts_cf
-[submodule "charts_cf"]
-	path = charts_cf
-	url = git@github.com:winksaville/charts_cf
+[submodule "submodules/charts"]
+	path = submodules/charts
+	url = https://github.com/winksaville/charts
